# simple-soft-float

./: Cargo.toml  Notices.txt  README.md  make_binary_op_test_cases.sh  make_calculate_propagation_results.sh  make_compare_test_cases.sh  make_float_to_float_conversion_test_cases.sh  make_float_to_integer_conversion_test_cases.sh  make_from_real_algebraic_number_test_cases.sh  make_fused_mul_add_test_cases.sh  make_integer_to_float_conversion_test_cases.sh  make_next_up_or_down_test_cases.sh  make_scale_b_test_cases.sh  make_unary_op_test_cases.sh
src/: binary_op_test_cases.rs  from_real_algebraic_number_test_cases.rs  lib.rs  python.rs  python_macros.rs  test_cases.rs
test_data/: add.txt  compare_quiet.txt  compare_signaling.txt  div.txt  f16_to_f32.txt  f16_to_i32.txt  f16_to_i64.txt  f16_to_u32.txt  f16_to_u64.txt  f32_to_f16.txt  f32_to_i32.txt  f32_to_i64.txt  f32_to_u32.txt  f32_to_u64.txt  from_real_algebraic_number.txt  i32_to_f16.txt  i32_to_f32.txt  i64_to_f16.txt  i64_to_f32.txt  ieee754_remainder.txt  mul.txt  mul_add_ties_to_away.txt  mul_add_ties_to_even.txt  mul_add_toward_negative.txt  mul_add_toward_positive.txt  mul_add_toward_zero.txt  next_up_or_down.txt  round_to_integral.txt  round_to_integral_exact.txt  rsqrt.txt  scale_b.txt  sqrt.txt  sub.txt  u32_to_f16.txt  u32_to_f32.txt  u64_to_f16.txt  u64_to_f32.txt
tests/: test_simple_soft_float.py
