# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "simple-soft-float"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
description = "soft-float library that intends to be a straightforward reference implementation of IEEE 754"
readme = "README.md"

[dependencies]
algebraics = ">= 0.1.2, < 0.2"
num-bigint = "0.2"
num-integer = "0.1"
num-traits = "0.2"
num-rational = "0.2"
bitflags = "1.2"
